packages/core/src/components/chip/chip.scss
/*
 * SPDX-FileCopyrightText: 2022 Siemens AG
 *
 * SPDX-License-Identifier: MIT
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

@import './chip-mixin';
@import 'common-variables';
@import 'mixins/text-truncation';

$border-radius: 100px;

:host {
  display: inline-flex;
  position: relative;
  align-items: center;
  border-radius: $border-radius;
  padding: $small-space $medium-space;

  height: $default-control-height;
  max-height: $default-control-height;

  cursor: pointer;

  .with-icon {
    margin-right: $tiny-space;
  }

  margin-left: $tiny-space;

  .close-button-container {
    display: inline-flex;
    flex-grow: 1;
    margin-left: $medium-space;
  }

  .close-button {
    position: relative;
    width: $default-space;
    height: $default-space;
    min-width: unset;
    min-height: unset;
    margin-left: auto;
    margin-right: 0;
  }

  @include chip();

  .slot-container {
    @include ellipsis;
  }
}

